name:                ttyped
version:             0.1.0.0
synopsis:            An dependently typed lambda calculus.
-- description:
homepage:            https://github.com/lambda-11235/ttyped
license:             BSD3
license-file:        LICENSE
author:              Taran Lynn
maintainer:          taranlynn0@gmail.com
copyright:           2017 Taran Lynn
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ttyped
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Check, Reduce, Representation, Lexer, Parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns
  build-depends:       base, array, parsec, readline
  build-tools:         alex
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lambda-11235/ttyped
